k8s-manifests/order-service/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-green
  labels:
    app: order-service
    environment: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
      environment: green
  template:
    metadata:
      labels:
        app: order-service
        environment: green
    spec:
      containers:
        - name: order-service
          image: navaneeth2003/order-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-green
spec:
  selector:
    app: order-service
    environment: green
  ports:
    - port: 80
      targetPort: 8081
