k8s-manifests/order-service/blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-blue-ingress
  labels:
    environment: blue
spec:
  rules:
  - host: order-service.a6f0ce1324be545eb822b17bc394ce9b-1781287919.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-service-blue
            port:
              number: 80
